Prevent invisible suggestions from covering page

--- a/src/components/SearchPage/SearchArea/TypeAhead.module.css
+++ b/src/components/SearchPage/SearchArea/TypeAhead.module.css
@@ -27,10 +27,13 @@
   /* transition: 1s opacity; */
   transition: 250ms opacity;
   opacity: unset;
+  height: unset;
 }
 
 .TypeAhead .Bottom.Hidden {
   opacity: 0;
+  height: 0px;
+  overflow: hidden;
 }
 
 .SuggestionList {
